--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-789.0KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
-  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 216.24.248.104, port: 29862, type: vmess, uuid: 281f345f-da96-485b-9aa3-4bc530f2ffa2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fdsfa, ws-headers: {Host: 216.24.248.104}}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.19MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: 23.230.146.254, port: 1258, type: vmess, uuid: edeb41cc-a76a-47f2-fa96-b9141e66a2b0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.15MB/s(Youtube:不良林), server: 69.161.221.157, port: 11816, type: vmess, uuid: db465612-a1eb-46a3-bdf5-33697132d115, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.96MB/s(Youtube:不良林), server: 140.238.42.147, port: 11188, type: vmess, uuid: 798550eb-c374-4113-b0d5-530e7d4ddedc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 140.238.42.147}}
+  - {name: 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇸🇬 新加坡-6.54MB/s(Youtube:不良林), server: 139.162.7.177, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 139.162.7.177}}
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
+  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-5.55MB/s(Youtube:不良林), server: 103.186.148.94, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.94}}
+  - {name: 🇻🇳 越南-9.11MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
+  - {name: 未知国家-4.53MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-789.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 未知国家-5.55MB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 未知国家-4.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
