--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-9.96MB/s(Youtube:不良林), server: 140.238.42.147, port: 11188, type: vmess, uuid: 798550eb-c374-4113-b0d5-530e7d4ddedc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 140.238.42.147}}
-  - {name: 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: vr.eseabean.xyz, port: 12860, type: vmess, uuid: f0c28644-eba5-4de7-e9ed-abcf58a657f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /media, ws-headers: {Host: vr.eseabean.xyz}}
   - {name: 🇸🇬 新加坡-6.54MB/s(Youtube:不良林), server: 139.162.7.177, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 139.162.7.177}}
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
+  - {name: 🇬🇧 英国-488.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
   - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
   - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 未知国家-5.55MB/s(Youtube:不良林), server: 103.186.148.94, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.94}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.96MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-6.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇬🇧 英国-488.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
       - 未知国家-5.55MB/s(Youtube:不良林)
