--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 129.159.41.233, port: 32586, type: vmess, uuid: 341a9182-c423-499c-c46e-d17838b29037, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: 150.230.197.142, port: 44634, type: vmess, uuid: c2d05105-857a-4c94-be34-5534e7e8285f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-13.31MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
+  - {name: 🇫🇷 法国-2.94MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇮🇳 印度-3.16MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
+  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-589.6KB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
   - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
-  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-5.55MB/s(Youtube:不良林), server: 103.186.148.94, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.94}}
-  - {name: 🇻🇳 越南-9.11MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
+  - {name: 🇸🇬 新加坡-3.10MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-5.33MB/s(Youtube:不良林), server: 103.186.148.94, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.94}}
   - {name: 未知国家-4.53MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.94MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 未知国家-5.55MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.10MB/s(Youtube:不良林)
+      - 未知国家-5.33MB/s(Youtube:不良林)
       - 未知国家-4.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
